// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Modal Collapsed information, renders correctly 1`] = `
<jest>
  <dialog
    aria-describedby="modal-example-body-scroll"
    aria-labelledby="modal-example-header"
    aria-modal="true"
    class="ecl-modal ecl-modal--information ecl-modal--l"
    data-ecl-auto-init="Modal"
    data-ecl-modal-toggle="modal-toggle"
    id="modal-example"
  >
    <div
      class="ecl-modal__container"
    >
      <div
        class="ecl-modal__content ecl-container"
      >
        <header
          class="ecl-modal__header"
        >
          <div
            class="ecl-modal__header-content"
            id="modal-example-header"
          >
            <span
              aria-hidden="false"
              class="wt-icon--information-outline ecl-icon ecl-icon--xl ecl-modal__icon ecl-icon--information-outline"
              role="img"
              title="Information"
            />
            Modal title
          </div>
          <button
            class="ecl-button ecl-button--tertiary ecl-button--m ecl-button--neutral ecl-modal__close ecl-button--icon-only"
            data-ecl-modal-close=""
            type="button"
          >
            <span
              class="ecl-button__container"
            >
              <span
                class="ecl-button__label"
                data-ecl-label="true"
              >
                Close
              </span>
              <span
                aria-hidden="true"
                class="wt-icon--close ecl-icon ecl-icon--m ecl-button__icon ecl-icon--close"
                data-ecl-icon=""
              />
            </span>
          </button>
        </header>
        <div
          class="ecl-modal__body"
        >
          <div
            class="ecl-modal__body-scroll"
            data-ecl-modal-scroll=""
            id="modal-example-body-scroll"
          >
            Scrollable content: 
            <br />
            Sed quam augue, volutpat sed dapibus in, accumsan a arcu. Nulla quam enim, porttitor at neque a, egestas porttitor tortor. Nam tortor sem, elementum id augue quis, posuere vestibulum dui. Donec id posuere libero, sit amet egestas lorem. Aliquam finibus ipsum mauris, a molestie tortor laoreet. Morbi interdum orci arcu, tempor porta nisl elementum non. Morbi blandit risus sed turpis mollis mattis. Maecenas semper, risus nec sollicitudin aliquet, dui eros vehicula nulla, ac bibendum mauris mauris a lectus. Ut ut justo in sem vestibulum mollis. Pellentesque ac commodo erat. Phasellus vitae aliquet mi. Suspendisse sed nisl feugiat, porta ante a, finibus nisi.
            <br />
            Sed quam augue, volutpat sed dapibus in, accumsan a arcu. Nulla quam enim, porttitor at neque a, egestas porttitor tortor. Nam tortor sem, elementum id augue quis, posuere vestibulum dui. Donec id posuere libero, sit amet egestas lorem. Aliquam finibus ipsum mauris, a molestie tortor laoreet. Morbi interdum orci arcu, tempor porta nisl elementum non. Morbi blandit risus sed turpis mollis mattis. Maecenas semper, risus nec sollicitudin aliquet, dui eros vehicula nulla, ac bibendum mauris mauris a lectus. Ut ut justo in sem vestibulum mollis. Pellentesque ac commodo erat. Phasellus vitae aliquet mi. Suspendisse sed nisl feugiat, porta ante a, finibus nisi.
          </div>
          <div
            aria-hidden="true"
            class="ecl-modal__body-overflow"
          />
          <div
            class="ecl-modal__body-fixed"
          >
            <div
              class="ecl-checkbox ecl-checkbox--single"
            >
              <input
                class="ecl-checkbox__input"
                id="checkbox-default-1"
                name="checkbox-default"
                type="checkbox"
                value="yes"
              />
              <label
                class="ecl-checkbox__label"
                for="checkbox-default-1"
              >
                <span
                  class="ecl-checkbox__box"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon--check ecl-icon ecl-icon--xs ecl-checkbox__icon ecl-icon--check"
                  />
                </span>
                <span
                  class="ecl-checkbox__text"
                >
                  Label Checkbox
                </span>
              </label>
            </div>
          </div>
        </div>
        <footer
          class="ecl-modal__footer"
        >
          <div
            class="ecl-modal__footer-content"
          >
            <button
              class="ecl-button ecl-button--primary ecl-button--m ecl-modal__button"
              type="submit"
            >
              Button
            </button>
            <button
              class="ecl-button ecl-button--secondary ecl-button--m ecl-modal__button"
              data-ecl-modal-close=""
              type="button"
            >
              Button
            </button>
            <button
              class="ecl-button ecl-button--secondary ecl-button--m ecl-button--neutral ecl-modal__button"
              type="button"
            >
              Button
            </button>
          </div>
        </footer>
      </div>
    </div>
  </dialog>
</jest>
`;

exports[`Modal Collapsed renders correctly 1`] = `
<jest>
  <dialog
    aria-describedby="modal-example-body-scroll"
    aria-labelledby="modal-example-header"
    aria-modal="true"
    class="ecl-modal ecl-modal--l"
    data-ecl-auto-init="Modal"
    data-ecl-modal-toggle="modal-toggle"
    id="modal-example"
  >
    <div
      class="ecl-modal__container"
    >
      <div
        class="ecl-modal__content ecl-container"
      >
        <header
          class="ecl-modal__header"
        >
          <div
            class="ecl-modal__header-content"
            id="modal-example-header"
          >
            Modal title
          </div>
          <button
            class="ecl-button ecl-button--tertiary ecl-button--m ecl-button--neutral ecl-modal__close ecl-button--icon-only"
            data-ecl-modal-close=""
            type="button"
          >
            <span
              class="ecl-button__container"
            >
              <span
                class="ecl-button__label"
                data-ecl-label="true"
              >
                Close
              </span>
              <span
                aria-hidden="true"
                class="wt-icon--close ecl-icon ecl-icon--m ecl-button__icon ecl-icon--close"
                data-ecl-icon=""
              />
            </span>
          </button>
        </header>
        <div
          class="ecl-modal__body"
        >
          <div
            class="ecl-modal__body-scroll"
            data-ecl-modal-scroll=""
            id="modal-example-body-scroll"
          >
            Scrollable content: 
            <br />
            Sed quam augue, volutpat sed dapibus in, accumsan a arcu. Nulla quam enim, porttitor at neque a, egestas porttitor tortor. Nam tortor sem, elementum id augue quis, posuere vestibulum dui. Donec id posuere libero, sit amet egestas lorem. Aliquam finibus ipsum mauris, a molestie tortor laoreet. Morbi interdum orci arcu, tempor porta nisl elementum non. Morbi blandit risus sed turpis mollis mattis. Maecenas semper, risus nec sollicitudin aliquet, dui eros vehicula nulla, ac bibendum mauris mauris a lectus. Ut ut justo in sem vestibulum mollis. Pellentesque ac commodo erat. Phasellus vitae aliquet mi. Suspendisse sed nisl feugiat, porta ante a, finibus nisi.
            <br />
            Sed quam augue, volutpat sed dapibus in, accumsan a arcu. Nulla quam enim, porttitor at neque a, egestas porttitor tortor. Nam tortor sem, elementum id augue quis, posuere vestibulum dui. Donec id posuere libero, sit amet egestas lorem. Aliquam finibus ipsum mauris, a molestie tortor laoreet. Morbi interdum orci arcu, tempor porta nisl elementum non. Morbi blandit risus sed turpis mollis mattis. Maecenas semper, risus nec sollicitudin aliquet, dui eros vehicula nulla, ac bibendum mauris mauris a lectus. Ut ut justo in sem vestibulum mollis. Pellentesque ac commodo erat. Phasellus vitae aliquet mi. Suspendisse sed nisl feugiat, porta ante a, finibus nisi.
          </div>
          <div
            aria-hidden="true"
            class="ecl-modal__body-overflow"
          />
          <div
            class="ecl-modal__body-fixed"
          >
            <div
              class="ecl-checkbox ecl-checkbox--single"
            >
              <input
                class="ecl-checkbox__input"
                id="checkbox-default-1"
                name="checkbox-default"
                type="checkbox"
                value="yes"
              />
              <label
                class="ecl-checkbox__label"
                for="checkbox-default-1"
              >
                <span
                  class="ecl-checkbox__box"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon--check ecl-icon ecl-icon--xs ecl-checkbox__icon ecl-icon--check"
                  />
                </span>
                <span
                  class="ecl-checkbox__text"
                >
                  Label Checkbox
                </span>
              </label>
            </div>
          </div>
        </div>
        <footer
          class="ecl-modal__footer"
        >
          <div
            class="ecl-modal__footer-content"
          >
            <button
              class="ecl-button ecl-button--primary ecl-button--m ecl-modal__button"
              type="submit"
            >
              Button
            </button>
            <button
              class="ecl-button ecl-button--secondary ecl-button--m ecl-modal__button"
              data-ecl-modal-close=""
              type="button"
            >
              Button
            </button>
            <button
              class="ecl-button ecl-button--secondary ecl-button--m ecl-button--neutral ecl-modal__button"
              type="button"
            >
              Button
            </button>
          </div>
        </footer>
      </div>
    </div>
  </dialog>
</jest>
`;

exports[`Modal Collapsed renders correctly with extra attributes 1`] = `
<jest>
  <dialog
    aria-describedby="modal-example-body-scroll"
    aria-labelledby="modal-example-header"
    aria-modal="true"
    class="ecl-modal ecl-modal--l"
    data-ecl-auto-init="Modal"
    data-ecl-modal-toggle="modal-toggle"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    id="modal-example"
  >
    <div
      class="ecl-modal__container"
    >
      <div
        class="ecl-modal__content ecl-container"
      >
        <header
          class="ecl-modal__header"
        >
          <div
            class="ecl-modal__header-content"
            id="modal-example-header"
          >
            Modal title
          </div>
          <button
            class="ecl-button ecl-button--tertiary ecl-button--m ecl-button--neutral ecl-modal__close ecl-button--icon-only"
            data-ecl-modal-close=""
            type="button"
          >
            <span
              class="ecl-button__container"
            >
              <span
                class="ecl-button__label"
                data-ecl-label="true"
              >
                Close
              </span>
              <span
                aria-hidden="true"
                class="wt-icon--close ecl-icon ecl-icon--m ecl-button__icon ecl-icon--close"
                data-ecl-icon=""
              />
            </span>
          </button>
        </header>
        <div
          class="ecl-modal__body"
        >
          <div
            class="ecl-modal__body-scroll"
            data-ecl-modal-scroll=""
            id="modal-example-body-scroll"
          >
            Scrollable content: 
            <br />
            Sed quam augue, volutpat sed dapibus in, accumsan a arcu. Nulla quam enim, porttitor at neque a, egestas porttitor tortor. Nam tortor sem, elementum id augue quis, posuere vestibulum dui. Donec id posuere libero, sit amet egestas lorem. Aliquam finibus ipsum mauris, a molestie tortor laoreet. Morbi interdum orci arcu, tempor porta nisl elementum non. Morbi blandit risus sed turpis mollis mattis. Maecenas semper, risus nec sollicitudin aliquet, dui eros vehicula nulla, ac bibendum mauris mauris a lectus. Ut ut justo in sem vestibulum mollis. Pellentesque ac commodo erat. Phasellus vitae aliquet mi. Suspendisse sed nisl feugiat, porta ante a, finibus nisi.
            <br />
            Sed quam augue, volutpat sed dapibus in, accumsan a arcu. Nulla quam enim, porttitor at neque a, egestas porttitor tortor. Nam tortor sem, elementum id augue quis, posuere vestibulum dui. Donec id posuere libero, sit amet egestas lorem. Aliquam finibus ipsum mauris, a molestie tortor laoreet. Morbi interdum orci arcu, tempor porta nisl elementum non. Morbi blandit risus sed turpis mollis mattis. Maecenas semper, risus nec sollicitudin aliquet, dui eros vehicula nulla, ac bibendum mauris mauris a lectus. Ut ut justo in sem vestibulum mollis. Pellentesque ac commodo erat. Phasellus vitae aliquet mi. Suspendisse sed nisl feugiat, porta ante a, finibus nisi.
          </div>
          <div
            aria-hidden="true"
            class="ecl-modal__body-overflow"
          />
          <div
            class="ecl-modal__body-fixed"
          >
            <div
              class="ecl-checkbox ecl-checkbox--single"
            >
              <input
                class="ecl-checkbox__input"
                id="checkbox-default-1"
                name="checkbox-default"
                type="checkbox"
                value="yes"
              />
              <label
                class="ecl-checkbox__label"
                for="checkbox-default-1"
              >
                <span
                  class="ecl-checkbox__box"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon--check ecl-icon ecl-icon--xs ecl-checkbox__icon ecl-icon--check"
                  />
                </span>
                <span
                  class="ecl-checkbox__text"
                >
                  Label Checkbox
                </span>
              </label>
            </div>
          </div>
        </div>
        <footer
          class="ecl-modal__footer"
        >
          <div
            class="ecl-modal__footer-content"
          >
            <button
              class="ecl-button ecl-button--primary ecl-button--m ecl-modal__button"
              type="submit"
            >
              Button
            </button>
            <button
              class="ecl-button ecl-button--secondary ecl-button--m ecl-modal__button"
              data-ecl-modal-close=""
              type="button"
            >
              Button
            </button>
            <button
              class="ecl-button ecl-button--secondary ecl-button--m ecl-button--neutral ecl-modal__button"
              type="button"
            >
              Button
            </button>
          </div>
        </footer>
      </div>
    </div>
  </dialog>
</jest>
`;

exports[`Modal Collapsed renders correctly with extra class names 1`] = `
<jest>
  <dialog
    aria-describedby="modal-example-body-scroll"
    aria-labelledby="modal-example-header"
    aria-modal="true"
    class="ecl-modal ecl-modal--l custom-class custom-class--test"
    data-ecl-auto-init="Modal"
    data-ecl-modal-toggle="modal-toggle"
    id="modal-example"
  >
    <div
      class="ecl-modal__container"
    >
      <div
        class="ecl-modal__content ecl-container"
      >
        <header
          class="ecl-modal__header"
        >
          <div
            class="ecl-modal__header-content"
            id="modal-example-header"
          >
            Modal title
          </div>
          <button
            class="ecl-button ecl-button--tertiary ecl-button--m ecl-button--neutral ecl-modal__close ecl-button--icon-only"
            data-ecl-modal-close=""
            type="button"
          >
            <span
              class="ecl-button__container"
            >
              <span
                class="ecl-button__label"
                data-ecl-label="true"
              >
                Close
              </span>
              <span
                aria-hidden="true"
                class="wt-icon--close ecl-icon ecl-icon--m ecl-button__icon ecl-icon--close"
                data-ecl-icon=""
              />
            </span>
          </button>
        </header>
        <div
          class="ecl-modal__body"
        >
          <div
            class="ecl-modal__body-scroll"
            data-ecl-modal-scroll=""
            id="modal-example-body-scroll"
          >
            Scrollable content: 
            <br />
            Sed quam augue, volutpat sed dapibus in, accumsan a arcu. Nulla quam enim, porttitor at neque a, egestas porttitor tortor. Nam tortor sem, elementum id augue quis, posuere vestibulum dui. Donec id posuere libero, sit amet egestas lorem. Aliquam finibus ipsum mauris, a molestie tortor laoreet. Morbi interdum orci arcu, tempor porta nisl elementum non. Morbi blandit risus sed turpis mollis mattis. Maecenas semper, risus nec sollicitudin aliquet, dui eros vehicula nulla, ac bibendum mauris mauris a lectus. Ut ut justo in sem vestibulum mollis. Pellentesque ac commodo erat. Phasellus vitae aliquet mi. Suspendisse sed nisl feugiat, porta ante a, finibus nisi.
            <br />
            Sed quam augue, volutpat sed dapibus in, accumsan a arcu. Nulla quam enim, porttitor at neque a, egestas porttitor tortor. Nam tortor sem, elementum id augue quis, posuere vestibulum dui. Donec id posuere libero, sit amet egestas lorem. Aliquam finibus ipsum mauris, a molestie tortor laoreet. Morbi interdum orci arcu, tempor porta nisl elementum non. Morbi blandit risus sed turpis mollis mattis. Maecenas semper, risus nec sollicitudin aliquet, dui eros vehicula nulla, ac bibendum mauris mauris a lectus. Ut ut justo in sem vestibulum mollis. Pellentesque ac commodo erat. Phasellus vitae aliquet mi. Suspendisse sed nisl feugiat, porta ante a, finibus nisi.
          </div>
          <div
            aria-hidden="true"
            class="ecl-modal__body-overflow"
          />
          <div
            class="ecl-modal__body-fixed"
          >
            <div
              class="ecl-checkbox ecl-checkbox--single"
            >
              <input
                class="ecl-checkbox__input"
                id="checkbox-default-1"
                name="checkbox-default"
                type="checkbox"
                value="yes"
              />
              <label
                class="ecl-checkbox__label"
                for="checkbox-default-1"
              >
                <span
                  class="ecl-checkbox__box"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon--check ecl-icon ecl-icon--xs ecl-checkbox__icon ecl-icon--check"
                  />
                </span>
                <span
                  class="ecl-checkbox__text"
                >
                  Label Checkbox
                </span>
              </label>
            </div>
          </div>
        </div>
        <footer
          class="ecl-modal__footer"
        >
          <div
            class="ecl-modal__footer-content"
          >
            <button
              class="ecl-button ecl-button--primary ecl-button--m ecl-modal__button"
              type="submit"
            >
              Button
            </button>
            <button
              class="ecl-button ecl-button--secondary ecl-button--m ecl-modal__button"
              data-ecl-modal-close=""
              type="button"
            >
              Button
            </button>
            <button
              class="ecl-button ecl-button--secondary ecl-button--m ecl-button--neutral ecl-modal__button"
              type="button"
            >
              Button
            </button>
          </div>
        </footer>
      </div>
    </div>
  </dialog>
</jest>
`;
